{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 55,
  "lineage": "bf68d6e1-e5b7-1ced-6cd4-b71974af7a61",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ingress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-09-01T21:44:15.928-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-vpc123-42853321/global/firewalls/ingress-all",
            "log_config": [],
            "name": "ingress-all",
            "network": "https://www.googleapis.com/compute/v1/projects/project-vpc123-42853321/global/networks/my-vpc-network",
            "priority": 1000,
            "project": "project-vpc123-42853321",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-vpc123-42853321/global/firewalls/ingress-all",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "public-instance"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project.project_vpc",
            "google_project_service.enable_APIs",
            "time_sleep.wait_for_API_enablement"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ingress_local",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-09-01T21:44:15.911-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-vpc123-42853321/global/firewalls/ingress-local",
            "log_config": [],
            "name": "ingress-local",
            "network": "https://www.googleapis.com/compute/v1/projects/project-vpc123-42853321/global/networks/my-vpc-network",
            "priority": 1000,
            "project": "project-vpc123-42853321",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-vpc123-42853321/global/firewalls/ingress-local",
            "source_ranges": [
              "10.0.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "private-instance"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project.project_vpc",
            "google_project_service.enable_APIs",
            "time_sleep.wait_for_API_enablement"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20230809",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-vpc123-42853321/zones/asia-southeast1-b/disks/private-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/project-vpc123-42853321/zones/asia-southeast1-b/instances/private-instance",
            "instance_id": "8580020436218086184",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "VNPOTiXOqdM=",
            "name": "private-instance",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-vpc123-42853321/global/networks/my-vpc-network",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-vpc123-42853321/regions/asia-southeast1/subnetworks/private-subnet",
                "subnetwork_project": "project-vpc123-42853321"
              }
            ],
            "project": "project-vpc123-42853321",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-vpc123-42853321/zones/asia-southeast1-b/instances/private-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "private-instance"
            ],
            "tags_fingerprint": "ByLCjydnAFI=",
            "zone": "asia-southeast1-b"
          },
          "dependencies": [
            "google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20230809",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-vpc123-42853321/zones/asia-southeast1-a/disks/public-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/project-vpc123-42853321/zones/asia-southeast1-a/instances/public-instance",
            "instance_id": "1917810970757890898",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "VNPOTiXOqdM=",
            "name": "public-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.143.236.190",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-vpc123-42853321/global/networks/my-vpc-network",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-vpc123-42853321/regions/asia-southeast1/subnetworks/public-subnet",
                "subnetwork_project": "project-vpc123-42853321"
              }
            ],
            "project": "project-vpc123-42853321",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-vpc123-42853321/zones/asia-southeast1-a/instances/public-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "public-instance"
            ],
            "tags_fingerprint": "MDtWZHP_Ee8=",
            "zone": "asia-southeast1-a"
          },
          "dependencies": [
            "google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/project-vpc123-42853321/global/networks/my-vpc-network",
            "mtu": 0,
            "name": "my-vpc-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "project-vpc123-42853321",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-vpc123-42853321/global/networks/my-vpc-network"
          },
          "dependencies": [
            "google_project.project_vpc",
            "google_project_service.enable_APIs",
            "time_sleep.wait_for_API_enablement"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-01T21:44:21.858-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/project-vpc123-42853321/regions/asia-southeast1/subnetworks/private-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/project-vpc123-42853321/global/networks/my-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-vpc123-42853321",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-vpc123-42853321/regions/asia-southeast1/subnetworks/private-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project.project_vpc",
            "google_project_service.enable_APIs",
            "time_sleep.wait_for_API_enablement"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-01T21:44:21.684-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/project-vpc123-42853321/regions/asia-southeast1/subnetworks/public-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/project-vpc123-42853321/global/networks/my-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-vpc123-42853321",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-vpc123-42853321/regions/asia-southeast1/subnetworks/public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project.project_vpc",
            "google_project_service.enable_APIs",
            "time_sleep.wait_for_API_enablement"
          ]
        }
      ]
    }
  ]
}